
################################################################################
##                                                                            ##
##  This file is part of NCrystal (see https://mctools.github.io/ncrystal/)   ##
##                                                                            ##
##  Copyright 2015-2024 NCrystal developers                                   ##
##                                                                            ##
##  Licensed under the Apache License, Version 2.0 (the "License");           ##
##  you may not use this file except in compliance with the License.          ##
##  You may obtain a copy of the License at                                   ##
##                                                                            ##
##      http://www.apache.org/licenses/LICENSE-2.0                            ##
##                                                                            ##
##  Unless required by applicable law or agreed to in writing, software       ##
##  distributed under the License is distributed on an "AS IS" BASIS,         ##
##  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  ##
##  See the License for the specific language governing permissions and       ##
##  limitations under the License.                                            ##
##                                                                            ##
################################################################################

[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "numpy",
    'importlib_metadata; python_version < "3.8"',
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = [
  "python3 -mNCrystal.test all",
  "nctool --test",
]

[project.scripts]
nctool = "NCrystal._cli_nctool:main"
ncrystal_cif2ncmat = "NCrystal._cli_cif2ncmat:main"
ncrystal_endf2ncmat = "NCrystal._cli_endf2ncmat:main"
ncrystal_hfg2ncmat = "NCrystal._cli_hfg2ncmat:main"
ncrystal_mcstasunion = "NCrystal._cli_mcstasunion:main"
ncrystal_ncmat2cpp = "NCrystal._cli_ncmat2cpp:main"
ncrystal_ncmat2hkl = "NCrystal._cli_ncmat2hkl:main"
ncrystal_vdos2ncmat = "NCrystal._cli_vdos2ncmat:main"
ncrystal_verifyatompos = "NCrystal._cli_verifyatompos:main"
